# superbank

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .tiltignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Tiltfile  Tiltfile.compose  docker-compose.yaml  flake.nix  renovate.json  superbank.example.yaml
.cargo/: config.toml
.github/: release-please-config.json
.github/workflows/: build-binaries.yml  ci.yml  codeql.yml  deps-audit.yml  e2e.yml  k6.yml  lint-pr-title.yml  release-please.yml  release.yml  tag-on-release-commit.yml
crates/superbank/: Cargo.toml  README.md  build.rs
crates/superbank-rpc/: Cargo.toml  README.md  build.rs
ddl/: README.md
ddl/cluster/: blocks_metadata.sql  entries.sql  epoch_schedule.sql  gsfa.sql  gsfa_hot.sql  gsfa_nohot.sql  signatures.sql  token_owner_activity.sql  transactions.sql
ddl/local/: blocks_metadata.sql  entries.sql  epoch_schedule.sql  gsfa.sql  gsfa_hot.sql  gsfa_nohot.sql  signatures.sql  token_owner_activity.sql  transactions.sql
ddl/replicated/: blocks_metadata.sql  entries.sql  epoch_schedule.sql  gsfa.sql  gsfa_hot.sql  gsfa_nohot.sql  signatures.sql  token_owner_activity.sql  transactions.sql
deploy/docker/: Dockerfile.superbank-dev-runtime
deploy/k8s/: 00-namespace.yaml  10-clickhouse.yaml  11-clickhouse-ddl-job.yaml  20-superbank-rpc.yaml  30-superbank-ingest-rpc-job.yaml  31-superbank-ingest-grpc.yaml
docs/: README.md  architecture.md  deployment.md  development.md  self-hosting.md  troubleshooting.md
docs/agents/: codex.md
ingest/: run_batch.sh
ingest/jetstreamer-clickhouse-plugin/: Cargo.toml  README.md
ingest/jetstreamer-clickhouse-plugin/src/: lib.rs
scripts/: copy-transactions.sh
scripts/analysis/: backfill-missing-bigtable-slots.sh  check-bigtable-clickhouse-slots.sh  check-cluster-table-missing-keys.sh  check-shard-key-consistency.sh  compare-signatures.py  (+9 more)
src/: lib.rs
(+122 files in other folders)
