[package]
name = "superbank-workspace"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Triton One Limited", "Miles Smith <52319902+notwedtm@users.noreply.github.com>", "Daniel Camargo <67828229+dancamarg0@users.noreply.github.com>", "Augustin Cheron <1165445+augustin-cheron@users.noreply.github.com>"]
publish = false

[workspace]
members = [
    "crates/superbank",
    "crates/superbank-rpc",
]

resolver = "2"
default-members = [
    "crates/superbank",
    "crates/superbank-rpc",
]
