[package]
name = "jetstreamer-clickhouse-plugin"
description = "ClickHouse ingestion plugin for Jetstreamer"
version = "0.4.0"
edition = "2024"
authors = ["Triton One Limited", "Miles Smith <52319902+notwedtm@users.noreply.github.com>", "Daniel Camargo <67828229+dancamarg0@users.noreply.github.com>", "Augustin Cheron <1165445+augustin-cheron@users.noreply.github.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/rpcpool/hydrant"
keywords = ["solana", "geyser", "jetstreamer", "firehose", "transaction"]

[workspace]

[patch.crates-io]
jetstreamer = { path = "../jetstreamer" }
jetstreamer-plugin = { path = "../jetstreamer/jetstreamer-plugin" }
jetstreamer-firehose = { path = "../jetstreamer/jetstreamer-firehose" }
jetstreamer-utils = { path = "../jetstreamer/jetstreamer-utils" }

[dependencies]
jetstreamer = "0.6"
jetstreamer-plugin = "0.6"
jetstreamer-firehose = "0.6"
clickhouse = { version = "0.14", features = ["inserter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
log = "0.4"
bs58 = "0.5"
parking_lot = "0.12"
solana-message = "3"
solana-transaction-status = "3"
solana-transaction-context = "3"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
url = "2"
